Fawkez 1.0.1 'Unnamed'  

Fawkez 1.0 'going public' (November 26, 2006)
https://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_0_0
   