@@ -1,5 +1,7 @@
 Fawkez 1.0.1 'Unnamed'  
 
+  * added up-to-date check for retrieve-3rd-party-libs target
+
 Fawkez 1.0 'going public' (November 26, 2006)
 https://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_0_0
    
